--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -77,27 +77,28 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="form-group row mt-4">
-						<div class="col-sm-2"></div>
-						<div class="col-sm-10 text-center">
-							<button type="submit" class="btn btn-info text-white form-control">立即上传</button>
-						</div>
-					</div>
-				</form>
-				<!-- 修改密码 -->
-				<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-				<form class="mt-5">				
-					<div class="form-group row mt-4">
-						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
-						<div class="col-sm-10">
-							<input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!" required>
-							<div class="invalid-feedback">
-								密码长度不能小于8位!
-							</div>							
-						</div>
-					</div>
-					<div class="form-group row mt-4">
+                    </div>
+                    <div class="form-group row mt-4">
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-10 text-center">
+                            <button type="submit" class="btn btn-info text-white form-control">立即上传</button>
+                        </div>
+                    </div>
+                </form>
+                <!-- 修改密码 -->
+                <h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
+                <form class="mt-5">
+                    <div class="form-group row mt-4">
+                        <label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!"
+                                   required>
+                            <div class="invalid-feedback">
+                                密码长度不能小于8位!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row mt-4">
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
 							<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
