--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -67,16 +67,16 @@
 				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">
 					<div class="form-group row mt-4">
 						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
-						<div class="col-sm-10">
-							<div class="custom-file">
-								<input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|"
-									   id="head-image" name="headerImage" lang="es" required="">
-								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
-								<div class="invalid-feedback" th:text="${error}">
-									该账号不存在!
-								</div>
-							</div>
-						</div>
+                        <div class="col-sm-10">
+                            <div class="custom-file">
+                                <input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|"
+                                       id="head-image" name="headerImage" lang="es" required="">
+                                <label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
+                                <div class="invalid-feedback" th:text="${error}">
+                                    该账号不存在!
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group row mt-4">
                         <div class="col-sm-2"></div>
@@ -99,16 +99,17 @@
                         </div>
                     </div>
                     <div class="form-group row mt-4">
-						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
-						<div class="col-sm-10">
-							<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback">
-								密码长度不能小于8位!
-							</div>							
-						</div>
-					</div>
-					<div class="form-group row mt-4">
-						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
+                        <label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!"
+                                   required>
+                            <div class="invalid-feedback">
+                                密码长度不能小于8位!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row mt-4">
+                        <label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
 							<input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!" required>
 							<div class="invalid-feedback">
